# SPEED

./: .gitignore  LICENSE.md  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  compose-ci.yml  first-cd.yml  first-ci.yml  leaders-cd.yml  leaders-ci.yml  optimizer-cd.yml  optimizer-ci.yml  workers-cd.yml  workers-ci.yml
.run/: leaders Dockerfile.run.xml  leaders Main.run.xml  workers Dockerfile.run.xml  workers Main.run.xml
first/: Dockerfile  main.py  requirements.txt
first/utils/: __init__.py  db.py  docker.py  docker_runner.py
kafka/: docker-compose.yml
kubernetes/: apply.sh  delete.sh  first-claim0-persistentvolumeclaim.yaml  first-deployment.yaml  first-service.yaml  firstdb-deployment.yaml  firstdb-service.yaml  kafka-deployment.yaml  kafka-service.yaml  leaders-deployment.yaml  optdb-deployment.yaml  optdb-service.yaml  optimizer-deployment.yaml  optimizer-service.yaml  rbac-authorization.yaml  workers-deployment.yaml  zoo-kafka-deployment.yaml  zoo-kafka-service.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml
leaders/: Dockerfile  build.gradle  checkstyle.xml  settings.gradle  spotbugs-filter.xml
leaders/gradle/wrapper/: gradle-wrapper.properties
leaders/src/main/java/edu/cornell/: CloseableSet.java  ENDPOINTS.java  KafkaConsumerRunner.java  KafkaConsumerThread.java  ListenWorkerThread.java  Main.java  SpawnWorkerThread.java  TestResultsRecord.java  TestResultsRecordDeserializer.java  WorkerRunner.java
microservices/first/: .gitignore  Dockerfile  app.py  db_schema.MD  first_api_doc.MD  main.py  pyproject.toml  requirements.txt
microservices/first-tier/: db_manager.py
microservices/first/utils/: __init__.py  db_manager.py  deployment_status.py  docker_runner.py
microservices/optimizer/: .dockerignore  Dockerfile  app.py  main.py  mypy.ini  optimizer_api_doc.MD  pyproject.toml  requirements.txt
microservices/optimizer/utils/: __init__.py  db_manager.py  optimizer.py
microservices/optimizer/utils/partition/: __init__.py  even_subset_split.py  partition_method.py
workers/: .gitignore  Dockerfile  build.gradle  checkstyle.xml  settings.gradle
workers/gradle/wrapper/: gradle-wrapper.properties
workers/src/main/java/edu/cornell/: Main.java  TestOutputStream.java
(+70 files in other folders)
